--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lowlight": "^3.3.0",
     "next": "15.3.4",
     "qrcode.react": "^4.2.0",
